--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ yarn-error.log*
 # vercel
 .vercel
 src/components/Post/__snapshots__/Post.test.tsx.snap
+src/templates/PostTemplate/__snapshots__/test.tsx.snap
