--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql": "^15.5.1",
     "graphql-request": "^3.4.0",
     "next": "^10.0.9",
+    "prismjs": "^1.24.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -36,6 +37,7 @@
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^27.0.0",
     "@types/node": "^14.14.35",
+    "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.3",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
